@@ -1,3 +1,11 @@
+2010-01-04 Borut Razem <borut.razem AT siol.net>
+
+	* doc/sdccman.lyx, support/cpp/libcpp/internal.h,
+	  support/cpp/libcpp/lex.c, support/cpp/sdcpp.c:
+	  fixed bug #2919991: #Pragma preproc_asm cannot be used by -- std-c99.
+	* support/cpp/libcpp/macro.c, support/cpp/version.c:
+	  SDCPP synchronized with GCC CPP release version 4.4.2.
+
 2009-12-31 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc/as/link/lkarea.c, sdcc/as/link/lkdata.c, sdcc/as/link/lklist.c,
